# EmbedMono

./: .gitignore  MonoEmbedSample.sln  README.md
Scripts/: CSharpCodeProvider_EventFreeze.cs  CSharpCodeProvider_StructFreeze.cs  README.markdown
Source/: BasicLoader.cpp  BasicLoader.h  CMakeLists.txt  EdimonRap.cpp  EdimonRap.h  Main.cpp  Makefile  MonoEmbedSample.vcxproj  MonoEmbedSample.vcxproj.filters  Monobind.cpp  Monobind.h  PathUtil.h  cmake_install.cmake  stdafx.cpp  stdafx.h  targetver.h
